background and box style

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div id="holder">
         <div class="overlay screen" id="start-screen">
-            <button onclick="startGame()"> Start </button>
+            <button class="myButton" onclick="startGame()"> Start </button>
         </div>
         <canvas class="overlay" id="game-canvas"></canvas>
         <div class="overlay screen" id="end-screen">
-            <div class="message"> Game Over. Your score <span id="player-score">0</span> </div>
+            <div class="title"> Game Over </div>
+            <div class="message"> <span id="end-score">0</span> points </div>
             <button onclick="restartGame()"> Restart </button>
         </div>
     </div>
