--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=600, user-scalable=0"/>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title>bhb</title>
     <link href="game.css" rel="stylesheet" />
     <script src="game.js"> </script>
 </head>
