--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <!-- <button onclick="startGame(true)"> ? </button> -->
             <button onclick="startGame(true)"> tutorial </button>
             <button onclick="startGame(false)"> play </button>
+            <div class="credits"> by vasuman </div>
         </div>
         <canvas class="overlay" id="game-canvas"></canvas>
         <div class="overlay screen" id="end-screen">
