--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="cache.appcache">
 <head>
     <meta name="viewport" content="width=600, user-scalable=0"/>
     <meta charset="UTF-8">
