--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>bhb</title>
     <link href="game.css" rel="stylesheet" />
     <script src="game.js"> </script>
+    <script src="cordova.js"></script>
 </head>
 <body>
     <div id="holder">
