--- a/index.html
+++ b/index.html
@@ -10,15 +10,29 @@
 </head>
 <body>
     <div id="holder">
+        <canvas class="overlay" id="game-canvas"></canvas>
         <div class="overlay screen" id="start-screen">
-            <div class="title"> bhb </div>
-            <!-- <button onclick="startGame(false)"> ▶ </button> -->
-            <!-- <button onclick="startGame(true)"> ? </button> -->
+            <div class="title"></div>
             <button onclick="startGame(true)"> tutorial </button>
             <button onclick="startGame(false)"> play </button>
+            <button onclick="transition(sI('settings-screen'))"> settings </button>
             <div class="credits"> by vasuman </div>
         </div>
-        <canvas class="overlay" id="game-canvas"></canvas>
+        <div class="overlay screen" id="settings-screen">
+            <div class="title"> settings </div>
+            <div class="setting">
+                <label>sound</label>
+                <input type="checkbox"></input>
+            </div>
+            <div class="setting">
+                <label>joystick size</label>
+                <input type="range"></input>
+            </div>
+            <div class="actions">
+                <button onclick="backToMenu()"> menu </button>
+                <button onclick="saveSettings()"> save </button>
+            </div>
+        </div>
         <div class="overlay screen" id="end-screen">
             <div class="title"> game over </div>
             <div class="stats-info">
@@ -26,10 +40,6 @@
                 <div> highscore <span class="stats" id="end-highscore">0</span> </div>
             </div>
             <div class="actions">
-                <!--
-                <button onclick="backToMenu()"> ⬅ </button>
-                <button onclick="restartGame()"> ⟲ </button>
-                -->
                 <button onclick="backToMenu()"> menu </button>
                 <button onclick="restartGame()"> restart </button>
             </div>
